--- a/ansible/playbooks/HelloWorld.yml
+++ b/ansible/playbooks/HelloWorld.yml
@@ -4,5 +4,5 @@
   tasks:
     - name: Create '/tmp/testfile.txt' with content 'hello world'.
       copy:
-        content: hello worldn
+        src: /home/mgarlich/git/MGMgettingstarted/ansible/files/testfile.txt
         dest: /tmp/testfile.txt
